[project]
name = "hypoforge"
version = "1.0.0"
description = "A web application for hypothesis testing and data analysis"
authors = [
    {name = "Prudhvi", email = "kprudhvi71@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.3",
    "scipy>=1.11.4",
    "numpy>=1.26.0",
    "aiohttp>=3.9.1",
]
requires-python = ">=3.8"

[project.scripts]
hypoforge = "app:main"

[project.urls]
Homepage = "https://github.com/prudhvi/hypoforge-python"
Repository = "https://github.com/prudhvi/hypoforge-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true